compiler/test-data/parser/control/errors/repeat_missing_body.frel
module control.errors.repeat_missing_body

backend ListBackend {
    items : List<String> = []
}

blueprint Bad {
    with ListBackend

    repeat on items
}
